Fix menu visibility
Forgot that I made the menu "visibility:hidden" by default.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -189,6 +189,7 @@ a {
         top: auto;
         @apply bg-transparent h-auto;
         z-index: 10;
+        visibility: visible;
         opacity: 1;
     }
 
